Added checkout.html, revised grid system for layout, introduced layout for homepage

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
       <nav class="fixed-nav-bar">
         <img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo.">
         <ul>
-          <li><a class="button navlink" href="home.html">Home</a></li><li><a class="button navlink" href="">Current Styles</a></li><li><a class="button navlink" href="">Past Styles</a></li><li><a class="button navlink" href="">About</a></li><li><a class="button navlink checkout" href="">Checkout (2)</a></li>
+          <li><a class="button navlink" href="home.html">Home</a></li><li><a class="button navlink" href="current-styles.html">Current Styles</a></li><li><a class="button navlink" href="past-styles.html">Past Styles</a></li><li><a class="button navlink" href="about.html">About</a></li><li><a class="button navlink checkout" href="checkout.html">Checkout (3)</a></li>
         </ul>
       </nav>
       <!-- NAVIGATION // -->
