Minor edits to homepage

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 
     <div class="wrapper"> <!-- // DIV that wraps around the whole document -->
 
-      <h1>Vancouver-designed, one-of-a-kind.</h1>
+      <h1>Vancouver-designed. One-of-a-kind.</h1>
 
       <p>Leggings chambray put a bird on it, Neutra jean shorts actually vinyl literally butcher freegan cliche Tumblr selfies. Try-hard mlkshk yr Bushwick cardigan swag. XOXO heirloom photo booth ethical, cronut Pinterest kitsch PBR pop-up cornhole wayfarers meh. Readymade locavore cliche leggings Wes Anderson. Salvia Bushwick pour-over, listicle health goth cardigan try-hard polaroid small batch Kickstarter art party you probably haven't heard of them. Aesthetic Kickstarter hella banjo cred. Tote bag skateboard banh mi Truffaut, put a bird on it irony artisan mustache YOLO single-origin coffee farm-to-table meggings ennui narwhal.</p>
 
@@ -30,7 +30,7 @@
       </nav>
       <!-- NAVIGATION // -->
 
-      <section id="current-styles">
+      <section id="current-styles" class="more-below">
       <h2 class="subheading">Current Styles</h2>
 
         <div class="grid-container">
@@ -47,7 +47,7 @@
         <a class="button more-info" href="">More Current Styles</a>
       </section>
 
-      <section id="past-styles">
+      <section id="past-styles" class="more-below">
       <h2 class="subheading">Past Styles</h2>
 
         <div class="grid-container">
