--- a/PastStyles.html
+++ b/PastStyles.html
@@ -47,6 +47,7 @@
             <figcaption class="product-info">
             <p class="product-name">Mountain T-Shirt</p>
             <p class="product-date">October 2015</p>
+             <p class="product-sold">Sold: 12 </p>
             </figcaption>
           </figure>
           <figure class="product-listing container-item">
@@ -54,6 +55,7 @@
             <figcaption class="product-info">
             <p class="product-name">Picnic T-Shirt</p>
             <p class="product-date">October 2015</p>
+             <p class="product-sold">Sold: 12 </p>
             </figcaption>
           </figure>
           <figure class="product-listing container-item">
@@ -61,6 +63,7 @@
             <figcaption class="product-info">
             <p class="product-name">Trees T-Shirt</p>
             <p class="product-date">October 2015</p>
+            <p class="product-sold">Sold: 12 </p>
             </figcaption>
           </figure>
           <figure class="product-listing container-item">
@@ -68,6 +71,7 @@
             <figcaption class="product-info">
             <p class="product-name">UFO T-Shirt</p>
             <p class="product-date">October 2015</p>
+             <p class="product-sold">Sold: 12 </p>
             </figcaption>
           </figure>
           <figure class="product-listing container-item">
@@ -75,6 +79,7 @@
             <figcaption class="product-info">
             <p class="product-name">Falling T-Shirt</p>
             <p class="product-date">October 2015</p>
+            <p class="product-sold">Sold: 12 </p>
             </figcaption>
           </figure>
           </div>
