Cleaned up CSS, renamed HTML files for consistency and edited current item and past item pages for CSS consistent with the style guide

--- a/current-styles.html
+++ b/current-styles.html
@@ -28,17 +28,17 @@
 
       <h1>Current Styles</h1>
 
-       <!-- // PSAT-STYLES // -->
+       <!-- // CURRENT-STYLES // -->
 
-      <section >
+      <section id="current-items">
         
         <div class="container">
-              <figure class="product-listing container-item">
+              <figure class="product-listing container-item"><a href="current-item.html">
                 <img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat.">
                 <figcaption class="product-info">
                   <p class="product-name">Bike T-Shirt</p>
                   <p class="product-price">$24.99</p>
-                </figcaption>
+                </figcaption></a>
               </figure>
               <figure class="product-listing container-item">
                 <img src="img/tshirt-mountain.png" alt="T-shirt with two mountains on the front. The tall mountain is thinking about food.">
