--- a/past-styles.html
+++ b/past-styles.html
@@ -28,58 +28,58 @@
 
       <h1>Past Styles</h1>
 
-       <!-- // PSAT-STYLES // -->
+       <!-- // PAST-STYLES // -->
 
       <section >
       
         
         <div class="container">
-          <figure class="product-listing container-item">
+          <figure class="product-listing container-item"><a href="past-item.html">
             <img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat.">
             <figcaption class="product-info">
-            <p class="product-name">Bike T-Shirt</p>
-            <p class="product-date">October 2015</p>
-            <p class="product-sold">Sold: 12 </p>
-            </figcaption>
+              <p class="product-name">Bike T-Shirt</p>
+              <p class="product-date">October 2015</p>
+              <p class="product-sold">Sold: 12 </p>
+            </figcaption></a>
           </figure>
           <figure class="product-listing container-item">
             <img src="img/tshirt-mountain.png" alt="T-shirt with two mountains on the front. The tall mountain is thinking about food.">
             <figcaption class="product-info">
-            <p class="product-name">Mountain T-Shirt</p>
-            <p class="product-date">October 2015</p>
-             <p class="product-sold">Sold: 12 </p>
+              <p class="product-name">Mountain T-Shirt</p>
+              <p class="product-date">October 2015</p>
+              <p class="product-sold">Sold: 12 </p>
             </figcaption>
           </figure>
           <figure class="product-listing container-item">
             <img src="img/tshirt-picnic.png" alt="T-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front.">
             <figcaption class="product-info">
-            <p class="product-name">Picnic T-Shirt</p>
-            <p class="product-date">October 2015</p>
-             <p class="product-sold">Sold: 12 </p>
+              <p class="product-name">Picnic T-Shirt</p>
+              <p class="product-date">October 2015</p>
+              <p class="product-sold">Sold: 12 </p>
             </figcaption>
           </figure>
           <figure class="product-listing container-item">
             <img src="img/tshirt-trees.png" alt="T-shirt with walking trees on the front.">
             <figcaption class="product-info">
-            <p class="product-name">Trees T-Shirt</p>
-            <p class="product-date">October 2015</p>
-            <p class="product-sold">Sold: 12 </p>
+              <p class="product-name">Trees T-Shirt</p>
+              <p class="product-date">October 2015</p>
+              <p class="product-sold">Sold: 12 </p>
             </figcaption>
           </figure>
           <figure class="product-listing container-item">
             <img src="img/tshirt-ufo.png" alt="T-shirt with a UFO abducting a man on the front.">
             <figcaption class="product-info">
-            <p class="product-name">UFO T-Shirt</p>
-            <p class="product-date">October 2015</p>
-             <p class="product-sold">Sold: 12 </p>
+              <p class="product-name">UFO T-Shirt</p>
+              <p class="product-date">October 2015</p>
+              <p class="product-sold">Sold: 12 </p>
             </figcaption>
           </figure>
           <figure class="product-listing container-item">
             <img src="img/tshirt-falling.png" alt="T-shirt with two falling children on the front.">
             <figcaption class="product-info">
-            <p class="product-name">Falling T-Shirt</p>
-            <p class="product-date">October 2015</p>
-            <p class="product-sold">Sold: 12 </p>
+              <p class="product-name">Falling T-Shirt</p>
+              <p class="product-date">October 2015</p>
+              <p class="product-sold">Sold: 12 </p>
             </figcaption>
           </figure>
           </div>
