Added the about page, began linking other pages to it

--- a/about.html
+++ b/about.html
@@ -26,12 +26,12 @@
       </nav>
       <!-- NAVIGATION // -->
 
-      <h1>Vancouver-designed. One-of-a-kind.</h1>
+      <h1>We are Fit to a Tee.</h1>
 
       <p>Leggings chambray put a bird on it, Neutra jean shorts actually vinyl literally butcher freegan cliche Tumblr selfies. Try-hard mlkshk yr Bushwick cardigan swag. XOXO heirloom photo booth ethical, cronut Pinterest kitsch PBR pop-up cornhole wayfarers meh. Readymade locavore cliche leggings Wes Anderson. Salvia Bushwick pour-over, listicle health goth cardigan try-hard polaroid small batch Kickstarter art party you probably haven't heard of them. Aesthetic Kickstarter hella banjo cred. Tote bag skateboard banh mi Truffaut, put a bird on it irony artisan mustache YOLO single-origin coffee farm-to-table meggings ennui narwhal.</p>
 
-      <section id="current-styles" class="more-below">
-      <h2 class="subheading">Current Styles</h2>
+      <section id="values" class="more-below">
+      <h2 class="subheading">What We Believe In</h2>
 
         <div class="grid-container">
           <div class="col-1of3">
@@ -44,24 +44,40 @@
             <div class="img-filler"></div>
           </div>
         </div>
-        <a class="button more-info" href="current-styles.html">More Current Styles</a>
       </section>
 
-      <section id="past-styles" class="more-below">
-      <h2 class="subheading">Past Styles</h2>
+      <section id="meet-the-team" class="more-below">
+      <h2 class="subheading">Meet Our Team</h2>
+
+        <div class="grid-container more-below">
+          <div class="col-1of3">
+            <div class="img-filler"></div>
+          </div>
+          <div class="col-2of3">
+            <h2>John Smith</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+
+        <div class="grid-container more-below">
+          <div class="col-1of3">
+            <div class="img-filler"></div>
+          </div>
+          <div class="col-2of3">
+            <h2>Joe Brown</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
 
         <div class="grid-container">
           <div class="col-1of3">
             <div class="img-filler"></div>
           </div>
-          <div class="col-1of3">
-            <div class="img-filler"></div>
-          </div>
-          <div class="col-1of3">
-            <div class="img-filler"></div>
+          <div class="col-2of3">
+            <h2>Andy Drew</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
-        <a class="button more-info" href="past-styles.html">More Past Styles</a>
       </section>
 
       <section id="upcoming-events">
@@ -78,7 +94,6 @@
             <div class="img-filler"></div>
           </div>
         </div>
-        <a class="button more-info" href="">More Upcoming Events</a>
       </section>
 
         <!-- TEMPLATES SECTION // -->
