--- a/past-item.html
+++ b/past-item.html
@@ -55,7 +55,7 @@
 
       <section id="reviews">
         <div>
-          <h2>Buyer Comments</h2>
+          <h2 class="subheading">Buyer Comments</h2>
           <div class="img-filler"></div>
         </div>
       </section>
