Added the contact info and form to the about page, finished linking it to the homepage

--- a/current-item.html
+++ b/current-item.html
@@ -99,11 +99,11 @@
       <section id="reviews">
         <div class="grid-container">
           <div class="col-2of3 more-below-small">
-            <h2 class="subheading">Reviews</h2>
+            <h2>Reviews</h2>
             <div class="img-filler"></div>
           </div>
           <div class="col-1of3">
-            <h2 class="subheading">Leave A Review</h2>
+            <h2>Leave A Review</h2>
             <form>
               <label class="textfield-label" for="input-name">Name</label>
               <input type="text" class="textfield" placeholder="Name" id="input-name">
