--- a/home.html
+++ b/home.html
@@ -64,8 +64,8 @@
         <a class="button more-info" href="past-styles.html">More Past Styles</a>
       </section>
 
-      <section id="upcoming-events">
-      <h2 class="subheading">Upcoming Events</h2>
+      <section id="updates">
+      <h2 class="subheading">Company Updates</h2>
 
         <div class="grid-container">
           <div class="col-1of3">
@@ -78,7 +78,7 @@
             <div class="img-filler"></div>
           </div>
         </div>
-        <a class="button more-info" href="">More Upcoming Events</a>
+        <a class="button more-info" href="about.html">More About Us</a>
       </section>
 
         <!-- TEMPLATES SECTION // -->
