--- a/past-styles.html
+++ b/past-styles.html
@@ -30,7 +30,7 @@
 
        <!-- // PAST-STYLES // -->
 
-      <section >
+      <section id="past-styles">
       
         
         <div class="container">
