--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
       </nav>
       <!-- NAVIGATION // -->
 
-      <h1>We are Fit to a Tee.</h1>
+      <h1>About Us</h1>
 
       <p>Leggings chambray put a bird on it, Neutra jean shorts actually vinyl literally butcher freegan cliche Tumblr selfies. Try-hard mlkshk yr Bushwick cardigan swag. XOXO heirloom photo booth ethical, cronut Pinterest kitsch PBR pop-up cornhole wayfarers meh. Readymade locavore cliche leggings Wes Anderson. Salvia Bushwick pour-over, listicle health goth cardigan try-hard polaroid small batch Kickstarter art party you probably haven't heard of them. Aesthetic Kickstarter hella banjo cred. Tote bag skateboard banh mi Truffaut, put a bird on it irony artisan mustache YOLO single-origin coffee farm-to-table meggings ennui narwhal.</p>
 
@@ -80,8 +80,8 @@
         </div>
       </section>
 
-      <section id="upcoming-events">
-      <h2 class="subheading">Upcoming Events</h2>
+      <section id="updates" class="more-below">
+      <h2 class="subheading">Company Updates</h2>
 
         <div class="grid-container">
           <div class="col-1of3">
@@ -94,6 +94,39 @@
             <div class="img-filler"></div>
           </div>
         </div>
+      </section>
+
+      <section id="contact-us">
+      <h2 class="subheading">Contact Us</h2>
+
+        <div class="grid-container">
+          <div class="col-2of3">
+            <div class="img-filler"><p>Have a map here</p></div>
+          </div>
+          <div class="col-1of3">
+            <h3>Where We Are</h3>
+            <div class="vcard">
+              <p class="fn"><a class="url" href="home.html">Fit To A Tee</a></p>
+              <p class="adr">
+                <span class="street-address">10810 Main Street</span><br>
+                <span class="region">Vancouver, BC</span><br>
+                <span class="country-name">Canada</span>
+                <span class="postal-code">V9W 5O8</span><br>
+              </p>
+              <p class="tel">(604) 271 9202</p>
+            </div>
+            <form>
+              <label class="textfield-label" for="input-name">Name</label>
+              <input type="text" class="textfield" placeholder="Name" id="input-name">
+              <label class="textfield-label" for="input-email">Email Address</label>
+              <input type="text" class="textfield" placeholder="Email Address" id="input-email">
+              <label class="textfield-label" for="input-comment">Leave A Comment</label>
+              <textarea class="textfield" id="input-comment" placeholder="Leave A Comment"></textarea>
+              <input type="submit" class="button submit" value="Leave Comment">
+              <input type="reset" class="button reset" value="Clear all">
+            </form>
+          </div>
+        </div> 
       </section>
 
         <!-- TEMPLATES SECTION // -->
