change the add to cart button to a link to checkout.html just for the nav to checkout page

--- a/current-item.html
+++ b/current-item.html
@@ -60,7 +60,8 @@
                 <input type="text" class="textfield" placeholder="Quantity" id="select-quantity">
               </div>
             </div>
-            <input type="submit" class="button submit" value="Add To Cart">
+            <a class="button submit" href="checkout.html">Add To Cart</a>
+            <!-- <input type="submit" class="button submit" value="Add To Cart"> -->
           </form>
         </div>
       </section>
