--- a/current-item.html
+++ b/current-item.html
@@ -40,7 +40,7 @@
               <div class="container-item">
                 <label class="textfield-label" for="select-colour">Colour</label>
                 <select id="select-colour" class="textfield">
-                  <option value="red">Red</option>
+                  <option value="red"></option>
                   <option value="black">Black</option>
                   <option value="white">White</option>
                 </select>
@@ -57,7 +57,13 @@
               </div>
               <div class="container-item">
                 <label class="textfield-label" for="select-quantity">Quantity</label>
-                <input type="text" class="textfield" placeholder="Quantity" id="select-quantity">
+                <select id="select-quantity" class="textfield">
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                </select>
               </div>
             </div>
             <a class="button submit" href="checkout.html">Add To Cart</a>
