Added the updated navbar to every page

--- a/index.html
+++ b/index.html
@@ -17,19 +17,21 @@
 
     <div class="wrapper"> <!-- // DIV that wraps around the whole document -->
 
+      <!-- // NAVIGATION -->
+      <nav class="fixed-nav-bar">
+        <a href="home.html"><img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo."></a>
+        <ul>
+          <li><a class="button navlink" href="current-styles.html">Current Styles</li><li><a class="button navlink" href="past-styles.html">Past Styles</a></li><li><a class="button navlink" href="about.html">About</a></li><li><a class="button navlink checkout" href="checkout.html">Checkout (3)</a></li>
+        </ul>
+      </nav>
+      <!-- NAVIGATION // -->
+
       <h1>Fit to a Tee Style Guide</h1>
       <p class="author">Brendan Lane</p>
 
       <p>Welcome to the <em>Fit to a Tee</em> style guide. This guide is a resource for maintaining a consistent design language and coding convention around Fit to a Tee's UI. It's used for storing and maintaining a living database of modular UI elements that make up our site, so that compliancy and consistency can be found across Fit to a Tee's site.</p>
 
-      <!-- // NAVIGATION -->
-      <nav class="fixed-nav-bar">
-        <img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo.">
-        <ul>
-          <li><a class="button navlink" href="#interactive_elements">Interactive Elements</a></li><li><a class="button navlink" href="#text_elements">Text Elements</a></li><li><a class="button navlink" href="#combined_elements">Combined Elements</a></li><li><a class="button navlink" href="#templates">Templates</a></li>
-        </ul>
-      </nav>
-      <!-- NAVIGATION // -->
+      
 
       <!-- // INTERACTIVE ELEMENTS SECTION -->
       <section id="interactive_elements">
