--- a/checkout.html
+++ b/checkout.html
@@ -19,9 +19,9 @@
 
       <!-- // NAVIGATION -->
       <nav class="fixed-nav-bar">
-        <img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo.">
+        <a href="home.html"><img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo."></a>
         <ul>
-          <li><a class="button navlink" href="home.html">Home</a></li><li><a class="button navlink" href="current-styles.html">Current Styles</a></li><li><a class="button navlink" href="past-styles.html">Past Styles</a></li><li><a class="button navlink" href="about.html">About</a></li><li><a class="button navlink checkout" href="checkout.html">Checkout (3)</a></li>
+          <li><a class="button navlink" href="current-styles.html">Current Styles</li><li><a class="button navlink" href="past-styles.html">Past Styles</a></li><li><a class="button navlink" href="about.html">About</a></li><li><a class="button navlink checkout" href="checkout.html">Checkout (3)</a></li>
         </ul>
       </nav>
       <!-- NAVIGATION // -->
