--- a/checkout.html
+++ b/checkout.html
@@ -26,7 +26,7 @@
       </nav>
       <!-- NAVIGATION // -->
 
-      <h1>Checkout</h1>
+      <h1>Checkout <span class="step-not-selected">/ Review / Confirm</span></h1>
 
       <section id="current-styles">
       <h2 class="subheading">My Items</h2>
@@ -53,7 +53,7 @@
               </div>
             </dl>
           </div>
-          <a class="button edit" href="">Edit</a>
+          <a class="button edit" href="current-item.html">Edit</a>
           <a class="button delete" href="">Delete</a>
         </div>
 
@@ -79,7 +79,7 @@
               </div>
             </dl>
           </div>
-          <a class="button edit" href="">Edit</a>
+          <a class="button edit" href="current-item.html">Edit</a>
           <a class="button delete" href="">Delete</a>
         </div>
 
@@ -105,41 +105,66 @@
               </div>
             </dl>
           </div>
-          <a class="button edit" href="">Edit</a>
+          <a class="button edit" href="current-item.html">Edit</a>
           <a class="button delete" href="">Delete</a>
         </div>
+
+        <p class="subtotal">
+          <strong>Subtotal:</strong> $89.97<br/>
+          <strong>Tax:</strong> $10.80<br/>
+          <strong>Shipping/Handling:</strong> $5.40<br/>
+          <span class="total"><strong>Total: $106.17</strong></span>
+        </p>
 
         <div class="grid-container more-below">
           <div class="col-1of2">
             <form class="more-below-small">
               <h2>Shipping Info</h2>
-              <label class="textfield-label" for="input-name">Name</label>
-              <input type="text" class="textfield" placeholder="Name" id="input-name">
-              <label class="textfield-label" for="input-address"> Address</label>
+              <label class="textfield-label" for="input-name">Full Name</label>
+              <input type="text" class="textfield" placeholder="Full Name" id="input-name">
+              <label class="textfield-label" for="input-address">Address</label>
               <input type="text" class="textfield" placeholder="Address" id="input-address">
-              <label class="textfield-label" for="input-postal-code"> Postal Code</label>
+              <label class="textfield-label" for="input-address-2">Address 2 (Optional)</label>
+              <input type="text" class="textfield" placeholder="Apartment, suite, unit, etc." id="input-address-2">
+              <label class="textfield-label" for="input-city">City</label>
+              <input type="text" class="textfield" placeholder="City" id="input-city">
+              <label class="textfield-label" for="input-province">Province</label>
+              <input type="text" class="textfield" placeholder="Province" id="input-province">
+              <label class="textfield-label" for="input-postal-code">Postal Code</label>
               <input type="text" class="textfield" placeholder="Address" id="input-address">
-              <input type="submit" class="button submit" value="Submit form">
-              <input type="reset" class="button reset" value="Clear all"> 
+              <label class="textfield-label" for="input-email">Email Address (Optional)</label>
+              <input type="text" class="textfield" placeholder="Email Address" id="input-email">
+              <label class="textfield-label" for="input-phone">Phone Number (Optional)</label>
+              <input type="text" class="textfield" placeholder="Phone Number" id="input-phone">
+              <input type="reset" class="button reset" value="Clear all">
             </form>
           </div>
 
           <div class="col-1of2">
             <form>
               <h2>Billing Info</h2>
-              <label class="textfield-label" for="input-name">Name</label>
-              <input type="text" class="textfield" placeholder="Name" id="input-name">
-              <label class="textfield-label" for="input-address"> Address</label>
-              <input type="text" class="textfield" placeholder="Address" id="input-address">
-              <label class="textfield-label" for="input-postal-code"> Postal Code</label>
-              <input type="text" class="textfield" placeholder="Address" id="input-address">
-              <input type="submit" class="button submit" value="Submit form">
-              <input type="reset" class="button reset" value="Clear all"> 
+              <label class="textfield-label" for="input-name-billing">Full Name</label>
+              <input type="text" class="textfield" placeholder="Full Name" id="input-name-billing">
+              <label class="textfield-label" for="input-address-billing">Address</label>
+              <input type="text" class="textfield" placeholder="Address" id="input-address-billing">
+              <label class="textfield-label" for="input-address-2-billing">Address 2 (Optional)</label>
+              <input type="text" class="textfield" placeholder="Apartment, suite, unit, etc." id="input-address-2-billing">
+              <label class="textfield-label" for="input-city-billing">City</label>
+              <input type="text" class="textfield" placeholder="City" id="input-city-billing">
+              <label class="textfield-label" for="input-province-billing">Province</label>
+              <input type="text" class="textfield" placeholder="Province" id="input-province-billing">
+              <label class="textfield-label" for="input-postal-code-billing">Postal Code</label>
+              <input type="text" class="textfield" placeholder="Address" id="input-address-billing">
+              <label class="textfield-label" for="input-email-billing">Email Address (Optional)</label>
+              <input type="text" class="textfield" placeholder="Email Address" id="input-email-billing">
+              <label class="textfield-label" for="input-phone-billing">Phone Number (Optional)</label>
+              <input type="text" class="textfield" placeholder="Phone Number" id="input-phone-billing">
+              <input type="reset" class="button reset" value="Clear all">
             </form>
           </div>
         </div>
 
-      <a class="button submit" href="">Review Order</a>
+      <a class="button submit" href="review.html">Review Order</a>
       </section>
 
         <!-- TEMPLATES SECTION // -->
