Added a dynamic map using Google Maps API

--- a/about.html
+++ b/about.html
@@ -11,6 +11,9 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Hind:400,600' rel='stylesheet' type='text/css'>    
     <link href="css/main.css" rel="stylesheet">
 
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script src="js/map.js"></script>
+
   </head>
 
   <body>
@@ -101,16 +104,18 @@
 
         <div class="grid-container">
           <div class="col-2of3">
-            <div class="img-filler"><p>Have a map here</p></div>
+            <div id="map">
+
+            </div>
           </div>
           <div class="col-1of3">
             <h3>Where We Are</h3>
             <div class="vcard">
               <p class="fn"><a class="url" href="home.html">Fit To A Tee</a></p>
               <p class="adr">
-                <span class="street-address">10810 Main Street</span><br>
+                <span class="street-address">125 Main Street</span><br>
                 <span class="region">Vancouver, BC</span><br>
-                <span class="country-name">Canada</span>
+                <span class="country-name">Canada</span><br>
                 <span class="postal-code">V9W 5O8</span><br>
               </p>
               <p class="tel">(604) 271 9202</p>
