Edited form content on about, current-item, and past-item pages for a better user experience

--- a/past-item.html
+++ b/past-item.html
@@ -61,13 +61,14 @@
           </div>
           <div class="col-1of3">
             <h2>Leave A Review</h2>
+            <p>All the fields are required, but don't worry! We won't publicly publish any of your information.</p>
             <form>
               <label class="textfield-label" for="input-name">Name</label>
               <input type="text" class="textfield" placeholder="Name" id="input-name">
               <label class="textfield-label" for="input-email">Email Address</label>
               <input type="text" class="textfield" placeholder="Email Address" id="input-email">
               <label class="textfield-label" for="input-review">Leave A Review</label>
-              <textarea class="textfield" id="input-review" placeholder="Leave A Review"></textarea>
+              <textarea class="textfield" id="input-review" placeholder="Review"></textarea>
               <input type="submit" class="button submit" value="Submit form">
               <input type="reset" class="button reset" value="Clear all">
             </form>
