--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
           </div>
           <div class="col-1of3">
             <h3>Where We Are</h3>
-            <div class="vcard">
+            <div class="vcard more-below">
               <p class="fn"><a class="url" href="home.html">Fit To A Tee</a></p>
               <p class="adr">
                 <span class="street-address">125 Main Street</span><br>
@@ -121,13 +121,15 @@
               <p class="tel">(604) 271 9202</p>
             </div>
             <form>
+              <h3>Leave A Message</h3>
+              <p>All the fields are required, but don't worry! We won't publicly publish any of your information.</p>
               <label class="textfield-label" for="input-name">Name</label>
               <input type="text" class="textfield" placeholder="Name" id="input-name">
               <label class="textfield-label" for="input-email">Email Address</label>
               <input type="text" class="textfield" placeholder="Email Address" id="input-email">
-              <label class="textfield-label" for="input-comment">Leave A Comment</label>
-              <textarea class="textfield" id="input-comment" placeholder="Leave A Comment"></textarea>
-              <input type="submit" class="button submit" value="Leave Comment">
+              <label class="textfield-label" for="input-comment">Leave A Message</label>
+              <textarea class="textfield" id="input-comment" placeholder="Message"></textarea>
+              <input type="submit" class="button submit" value="Send Message">
               <input type="reset" class="button reset" value="Clear all">
             </form>
           </div>
