Linked every item on the current-styles to go to the current-item page, and every item in past-styles goes to the past-item page

--- a/current-styles.html
+++ b/current-styles.html
@@ -40,40 +40,40 @@
                   <p class="product-price">$29.99</p>
                 </figcaption></a>
               </figure>
-              <figure class="product-listing container-item">
+              <figure class="product-listing container-item"><a href="current-item.html">
                 <img src="img/tshirt-mountain.png" alt="T-shirt with two mountains on the front. The tall mountain is thinking about food.">
                 <figcaption class="product-info">
                   <p class="product-name">Mountain T-Shirt</p>
                   <p class="product-price">$29.99</p>
-                </figcaption>
+                </figcaption></a>
               </figure>
-              <figure class="product-listing container-item">
+              <figure class="product-listing container-item"><a href="current-item.html">
                 <img src="img/tshirt-picnic.png" alt="T-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front.">
                 <figcaption class="product-info">
                   <p class="product-name">Picnic T-Shirt</p>
                   <p class="product-price">$29.99</p>
-                </figcaption>
+                </figcaption></a>
               </figure>
-              <figure class="product-listing container-item">
+              <figure class="product-listing container-item"><a href="current-item.html">
                 <img src="img/tshirt-trees.png" alt="T-shirt with walking trees on the front.">
                 <figcaption class="product-info">
                   <p class="product-name">Trees T-Shirt</p>
                   <p class="product-price">$29.99</p>
-                </figcaption>
+                </figcaption></a>
               </figure>
-              <figure class="product-listing container-item">
+              <figure class="product-listing container-item"><a href="current-item.html">
                 <img src="img/tshirt-ufo.png" alt="T-shirt with a UFO abducting a man on the front.">
                 <figcaption class="product-info">
                   <p class="product-name">UFO T-Shirt</p>
                   <p class="product-price">$29.99</p>
-                </figcaption>
+                </figcaption></a>
               </figure>
-              <figure class="product-listing container-item">
+              <figure class="product-listing container-item"><a href="current-item.html">
                 <img src="img/tshirt-falling.png" alt="T-shirt with two falling children on the front.">
                 <figcaption class="product-info">
                   <p class="product-name">Falling T-Shirt</p>
                   <p class="product-price">$29.99</p>
-                </figcaption>
+                </figcaption></a>
               </figure>
             </div>
         
