Added the footer to every page

--- a/confirm.html
+++ b/confirm.html
@@ -36,7 +36,11 @@
       <a class="button submit" href="current-styles.html">Shop Some More</a>
       </section>
 
-        <!-- TEMPLATES SECTION // -->
+      <footer>
+        <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
+        <p>&copy;2015 Fit To A Tee<br/>
+          Brendan Lane and Shengting Hu</p>
+      </footer>
 
     </div>
   </body>
