--- a/checkout.html
+++ b/checkout.html
@@ -167,7 +167,11 @@
       <a class="button submit" href="review.html">Review Order</a>
       </section>
 
-        <!-- TEMPLATES SECTION // -->
+      <footer>
+        <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
+        <p>&copy;2015 Fit To A Tee<br/>
+          Brendan Lane and Shengting Hu</p>
+      </footer>
 
     </div>
   </body>
