--- a/past-item.html
+++ b/past-item.html
@@ -75,7 +75,11 @@
           </div>
         </div> 
       </section>
-
+      <footer>
+        <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
+        <p>&copy;2015 Fit To A Tee<br/>
+          Brendan Lane and Shengting Hu</p>
+      </footer>
     </div>
   </body>
 </html>
