--- a/review.html
+++ b/review.html
@@ -80,7 +80,11 @@
       <a class="button submit" href="confirm.html">Confirm Order</a>
       </section>
 
-        <!-- TEMPLATES SECTION // -->
+      <footer>
+        <img class="footer-image" src="img/logo-footer.png" alt="Fit To A Tee logomark, with a diagonally striped t-shirt inside a circle.">
+        <p>&copy;2015 Fit To A Tee<br/>
+          Brendan Lane and Shengting Hu</p>
+      </footer>
 
     </div>
   </body>
