add six images for past styles replace the images in the past sytles page

--- a/past-styles.html
+++ b/past-styles.html
@@ -35,49 +35,49 @@
         
         <div class="container">
           <figure class="product-listing container-item"><a href="past-item.html">
-            <img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat.">
+            <img src="img/tshirt_box.png" alt="T-shirt with a gift box on the front. ">
             <figcaption class="product-info">
-              <p class="product-name">Bike T-Shirt</p>
+              <p class="product-name">Gift Box T-Shirt</p>
               <p class="product-date">October 2015</p>
               <p class="product-sold">Sold: 12 </p>
             </figcaption></a>
           </figure>
           <figure class="product-listing container-item"><a href="past-item.html">
-            <img src="img/tshirt-mountain.png" alt="T-shirt with two mountains on the front. The tall mountain is thinking about food.">
+            <img src="img/tshirt_ballon.png" alt="T-shirt with a ballon on the front. ">
             <figcaption class="product-info">
-              <p class="product-name">Mountain T-Shirt</p>
+              <p class="product-name">Ballon T-Shirt</p>
               <p class="product-date">October 2015</p>
               <p class="product-sold">Sold: 12 </p>
             </figcaption></a>
           </figure>
           <figure class="product-listing container-item"><a href="past-item.html">
-            <img src="img/tshirt-picnic.png" alt="T-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front.">
+            <img src="img/tshirt_cake.png" alt="T-shirt with a cake on the front.">
             <figcaption class="product-info">
-              <p class="product-name">Picnic T-Shirt</p>
+              <p class="product-name">Cake T-Shirt</p>
               <p class="product-date">October 2015</p>
               <p class="product-sold">Sold: 12 </p>
             </figcaption></a>
           </figure>
           <figure class="product-listing container-item"><a href="past-item.html">
-            <img src="img/tshirt-trees.png" alt="T-shirt with walking trees on the front.">
+            <img src="img/tshirt_xmastrees.png" alt="T-shirt with Xmas trees on the front.">
             <figcaption class="product-info">
-              <p class="product-name">Trees T-Shirt</p>
+              <p class="product-name">Xmas Trees T-Shirt</p>
               <p class="product-date">October 2015</p>
               <p class="product-sold">Sold: 12 </p>
             </figcaption></a>
           </figure>
           <figure class="product-listing container-item"><a href="past-item.html">
-            <img src="img/tshirt-ufo.png" alt="T-shirt with a UFO abducting a man on the front.">
+            <img src="img/tshirt_cupcake.png" alt="T-shirt with a cupcake on the front.">
             <figcaption class="product-info">
-              <p class="product-name">UFO T-Shirt</p>
+              <p class="product-name">Cupcake T-Shirt</p>
               <p class="product-date">October 2015</p>
               <p class="product-sold">Sold: 12 </p>
             </figcaption></a>
           </figure>
           <figure class="product-listing container-item"><a href="past-item.html">
-            <img src="img/tshirt-falling.png" alt="T-shirt with two falling children on the front.">
+            <img src="img/tshirt_paper.png" alt="T-shirt with two falling children on the front.">
             <figcaption class="product-info">
-              <p class="product-name">Falling T-Shirt</p>
+              <p class="product-name">Celebrate T-Shirt</p>
               <p class="product-date">October 2015</p>
               <p class="product-sold">Sold: 12 </p>
             </figcaption></a>
