change the image format

--- a/past-styles.html
+++ b/past-styles.html
@@ -43,7 +43,7 @@
             </figcaption></a>
           </figure>
           <figure class="product-listing container-item"><a href="past-item.html">
-            <img src="img/tshirt_ballon.png" alt="T-shirt with a ballon on the front. ">
+            <img src="img/tshirt_balloon.png" alt="T-shirt with a ballon on the front. ">
             <figcaption class="product-info">
               <p class="product-name">Ballon T-Shirt</p>
               <p class="product-date">October 2015</p>
@@ -59,7 +59,7 @@
             </figcaption></a>
           </figure>
           <figure class="product-listing container-item"><a href="past-item.html">
-            <img src="img/tshirt_xmastrees.png" alt="T-shirt with Xmas trees on the front.">
+            <img src="img/tshirt_xmastree.png" alt="T-shirt with Xmas trees on the front.">
             <figcaption class="product-info">
               <p class="product-name">Xmas Trees T-Shirt</p>
               <p class="product-date">October 2015</p>
