change the image and title for the past item example

--- a/past-item.html
+++ b/past-item.html
@@ -30,11 +30,11 @@
       <section id="current-item">
 
         <div class="product-view more-below">
-          <div class="placeholder-img-product-view"></div>
-          <h1>Bike T-Shirt</h1>
+          <div ><img src="img/tshirt_box.png" alt="T-shirt with a gift box on the front. " class="placeholder-img-product-view"></div>
+          <h1>Gift Box T-Shirt</h1>
           <p class="product-date">Style Ended: December 2015</p>
           <p class="product-sold">Shirts Sold: 12</p>
-          <p>This fun bike t-shirt is made from a 100% bamboo tri-blend, and available in red, black, and white. It's a unisex fit and can be machine-washed and dried without any trouble.</p>
+          <p>This gift box t-shirt is made from a 100% bamboo tri-blend, and available in red, black, and white. It's a unisex fit and can be machine-washed and dried without any trouble.</p>
           
         </div>
       </section>
