Fixed the items on the detailed product view so that the images were not stretched. Began editing the content on the homepage and on the about page.

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
       <h1>About Us</h1>
 
-      <p>Leggings chambray put a bird on it, Neutra jean shorts actually vinyl literally butcher freegan cliche Tumblr selfies. Try-hard mlkshk yr Bushwick cardigan swag. XOXO heirloom photo booth ethical, cronut Pinterest kitsch PBR pop-up cornhole wayfarers meh. Readymade locavore cliche leggings Wes Anderson. Salvia Bushwick pour-over, listicle health goth cardigan try-hard polaroid small batch Kickstarter art party you probably haven't heard of them. Aesthetic Kickstarter hella banjo cred. Tote bag skateboard banh mi Truffaut, put a bird on it irony artisan mustache YOLO single-origin coffee farm-to-table meggings ennui narwhal.</p>
+      <p><em>Fit to a Tee</em> is a Vancouver-based t-shirt company that makes limited edition, short run, one of a kind t-shirts. We design unique styles which are only available for one month, so that everything stays nice and fresh. We want you to look great in a t-shirt that few other people can call their own, and we want you to feel great about wearing it.</p>
 
       <section id="values" class="more-below">
       <h2 class="subheading">What We Believe In</h2>
@@ -39,12 +39,15 @@
         <div class="grid-container">
           <div class="col-1of3">
             <div class="img-filler"></div>
+            <h3>Uniqueness.</h3>
           </div>
           <div class="col-1of3">
             <div class="img-filler"></div>
+            <h3>Sustainability.</h3>
           </div>
           <div class="col-1of3">
             <div class="img-filler"></div>
+            <h3>Great Design.</h3>
           </div>
         </div>
       </section>
