--- a/current-item.html
+++ b/current-item.html
@@ -30,7 +30,7 @@
       <section id="current-item">
 
         <div class="product-view more-below">
-          <div class="placeholder-img-product-view"></div>
+          <img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat." class="img-product-view">
           <h1>Bike T-Shirt</h1>
           <p class="product-date">Style Ends: December 2015</p>
           <p class="product-price">$29.99</p>
