--- a/home.html
+++ b/home.html
@@ -28,7 +28,9 @@
 
       <h1>Vancouver-designed. One-of-a-kind.</h1>
 
-      <p>Leggings chambray put a bird on it, Neutra jean shorts actually vinyl literally butcher freegan cliche Tumblr selfies. Try-hard mlkshk yr Bushwick cardigan swag. XOXO heirloom photo booth ethical, cronut Pinterest kitsch PBR pop-up cornhole wayfarers meh. Readymade locavore cliche leggings Wes Anderson. Salvia Bushwick pour-over, listicle health goth cardigan try-hard polaroid small batch Kickstarter art party you probably haven't heard of them. Aesthetic Kickstarter hella banjo cred. Tote bag skateboard banh mi Truffaut, put a bird on it irony artisan mustache YOLO single-origin coffee farm-to-table meggings ennui narwhal.</p>
+      <p>Discover unique, sustainable, and beautifully-designed t-shirts from Vancouver, British Columbia.</p>
+
+      <a class="button submit" href="about.html">More About Us</a>
 
       <section id="current-styles" class="more-below">
       <h2 class="subheading">Current Styles</h2>
