--- a/past-item.html
+++ b/past-item.html
@@ -30,7 +30,7 @@
       <section id="current-item">
 
         <div class="product-view more-below">
-          <div ><img src="img/tshirt_box.png" alt="T-shirt with a gift box on the front. " class="placeholder-img-product-view"></div>
+          <img src="img/tshirt_box.png" alt="T-shirt with a gift box on the front." class="img-product-view">
           <h1>Gift Box T-Shirt</h1>
           <p class="product-date">Style Ended: December 2015</p>
           <p class="product-sold">Shirts Sold: 12</p>
